tdf#128593 fix crash on setting table background color

Change-Id: I9596cd9817d63590f07ffd2068e79b2df5806aeb
Reviewed-on: https://gerrit.libreoffice.org/82128
Tested-by: Jenkins
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>