sw/source/uibase/shells/basesh.cxx
@@ -2345,7 +2345,7 @@ void SwBaseShell::ExecBckCol(SfxRequest& rReq)
 
             aBrushItem->SetGraphicPos(GPOS_NONE);
 
-            sal_uInt16 nSlotId = SID_BACKGROUND_COLOR ? SID_BACKGROUND_COLOR : SID_TABLE_CELL_BACKGROUND_COLOR;
+            sal_uInt16 nSlotId = (nSlot == SID_BACKGROUND_COLOR) ? SID_BACKGROUND_COLOR : SID_TABLE_CELL_BACKGROUND_COLOR;
             if (pArgs && SfxItemState::SET == pArgs->GetItemState(SID_ATTR_COLOR_STR, false, &pColorStringItem))
             {
                 OUString sColor = static_cast<const SfxStringItem*>(pColorStringItem)->GetValue();
